# yew-tutorial

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
src/: lib.rs  main.rs
src/data/: mod.rs  msg.rs  reducer.rs  state.rs
src/data/actions/: fetch_cats.rs  mod.rs
src/data/model/: cat.rs
src/view/: mod.rs
src/view/core/: app.rs  mod.rs  router.rs
src/view/interop/: mod.rs  toast.rs
src/view/pages/: home.rs  profile.rs
