[package]
name = "yew-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
yew = "0.19"
yew-router = "0.16"
yewdux = "0.8.3"
yew-interop = { version = "0.3.0", features = ["script"] }
js-sys = "0.3"
gloo-net = "0.2.4"
gloo-timers = "0.2.4"
log = "0.4"
serde = "1.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
